--- a/fe_cocktail/src/style.css
+++ b/fe_cocktail/src/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
     margin: 0;
     padding: 0;
@@ -5,4 +9,5 @@
     box-sizing: border-box;
     text-decoration: none;
     text-emphasis: none;
+    font-family: 'Montserrat', sans-serif;
 }
